# pyOPAC

./: LICENSE  MANIFEST.in  README.md  __init__.py  descriptors.py  flexible_commands.sh  merge_parity.py  pyproject.toml  requirements.txt  setup.py  xyz_utils.py
active_learning/: __init__.py  active_learning.py  data_loader.py  logger.py  predict_with_uncertainty.py  uncertainty_sampling.py
creating_the_xyz/: modify.py
examples/: README.md
examples/1_gas_phase_solution_phase_energy/: README.md  dft_calculation.py  examples_usage.ipynb  split_xyz.sh  test.txt  train.txt
models/: __init__.py  predict_properties.py  trainer.py
notebooks/: 01_Modify_Training_XYZ.ipynb  01_Modify_Training_XYZ.py  02_Preprocess_Training_Data.ipynb  02_Preprocess_Training_Data.py  03_Train_Model.ipynb  03_Train_Model.py  03_Train_Model_with_hyperparameters.ipynb  03_Train_Model_with_hyperparameters.py  04_Modify_Test_XYZ.ipynb  04_Modify_Test_XYZ.py  05_Compute_Test_Descriptors.ipynb  05_Compute_Test_Descriptors.py  06_Predict_Properties.ipynb  06_Predict_Properties.py  07_Active_Learning.ipynb  07_Active_Learning.py  08_Predict_with_al_model..ipynb  08_Predict_with_al_model.ipynb  08_Predict_with_al_model.py  README.md
opac/: __init__.py
opac/active_learning/: active_learning.py  al_loop.py  dataloader.py  logger.py  predict_new_data.py  predict_properties.py  predict_with_uncertainty.py  trainer.py  uncertainty_sampling.py
opac/data/: dataset.py  descriptors.py  loader.py
opac/models/: diffusion.py  generator.py  predictor.py  (+1 more)
scripts/: __init__.py  train_model.py
(+8 files in other folders)
