[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOPAC"
version = "0.1.0"
requires-python = ">=3.7"
dynamic = ["readme", "description", "dependencies", "optional-dependencies", "authors", "keywords", "classifiers", "urls", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
